[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yathish_world"
version = "0.0.1"
authors = [
  { name="yathish", email="iamyathi.py@gmail.com" },
]
description = "welcome to yathish's world"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/yathish_world"
"Bug Tracker" = "https://github.com/pypa/yathish_world/issues"